2010-04-28 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-10-02
	* When checking for directory existence, check that the
	  directory is writable for the user, too.
	* Throw exception is db log file cannot be appended.

2010-04-13 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-10-01
	* Use the thread safe version localtime_r instead of localtime which
	  uses a static struct internally.

2010-04-12 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-10-00
	* Make the db log file path configurable (still defaults to
	  filePath+"/log").
	* Add db log file path to the disks to be monitored.
	* Add a 'failHighWaterMark' configuration parameter (default 95%).
	  If any of the disks not listed in 'otherDiskPaths' is going beyond
	  this disk usage (in %), the SM will go into Failed state.
	* Use disk usage in % rather than fractional part for 'highWaterMark'.
	* Fix order of configuration of ResourceMonitorCollection to assure
	  that the correct alarm parameters are set before disks are checked.

2010-04-13 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-09-03
	* Use the thread safe version localtime_r instead of localtime which
	  uses a static struct internally.
	* Fix order of configuration of ResourceMonitorCollection to assure
	  that the correct alarm parameters are set before disks are checked.

2010-04-06 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-09-02
	* Use the same time object for file timestamps in database log file
	  and for the file name.
	* Add simple unit test for time retrieval and time stamp generation.
	* Lump unwanted event alarms by output module, i.e. do not
	  generate an alarm for each trigger bit combination.
	* Increase default DQM event queue limit to 3072 entries.

2010-03-25 Remi Mommsen <Remigius.Mommsen@cern.ch>

	* tag V05-09-01
	* Use local ofstream to assure that it is destroyed after each use.
	* Explicitly clear the file counter per luminosity section map when
	  streams are destroyed.